@@ -27,12 +27,15 @@ package org.broadinstitute.sting.gatk.walkers.genotyper;
 
 import net.sf.samtools.SAMUtils;
 import org.broadinstitute.sting.utils.BaseUtils;
-import org.broadinstitute.sting.utils.FragmentUtils;
+import org.broadinstitute.sting.utils.fragments.FragmentCollection;
+import org.broadinstitute.sting.utils.fragments.FragmentUtils;
 import org.broadinstitute.sting.utils.MathUtils;
 import org.broadinstitute.sting.utils.QualityUtils;
 import org.broadinstitute.sting.utils.exceptions.UserException;
 import org.broadinstitute.sting.utils.pileup.PileupElement;
 import org.broadinstitute.sting.utils.pileup.ReadBackedPileup;
+
+import java.util.List;
 
 import static java.lang.Math.log10;
 import static java.lang.Math.pow;
@@ -259,16 +262,17 @@ public class DiploidSNPGenotypeLikelihoods implements Cloneable {
         int n = 0;
 
         // for each fragment, add to the likelihoods
-        FragmentUtils fpile = new FragmentUtils(pileup);
+        FragmentCollection<PileupElement> fpile = pileup.toFragments();
 
-        for ( PileupElement p : fpile.getOneReadPileup() )
+        for ( PileupElement p : fpile.getSingletonReads() )
             n += add(p, ignoreBadBases, capBaseQualsAtMappingQual, minBaseQual);
 
-        for ( FragmentUtils.TwoReadPileupElement twoRead : fpile.getTwoReadPileup() )
-            n += add(twoRead, ignoreBadBases, capBaseQualsAtMappingQual, minBaseQual);
+        for ( List<PileupElement> overlappingPair : fpile.getOverlappingPairs() )
+            n += add(overlappingPair, ignoreBadBases, capBaseQualsAtMappingQual, minBaseQual);
 
         return n;
     }
+
     public int add(PileupElement elt, boolean ignoreBadBases, boolean capBaseQualsAtMappingQual, int minBaseQual) {
         byte obsBase = elt.getBase();
 
@@ -286,11 +290,14 @@ public class DiploidSNPGenotypeLikelihoods implements Cloneable {
         }
     }
 
-    public int add(FragmentUtils.TwoReadPileupElement twoRead, boolean ignoreBadBases, boolean capBaseQualsAtMappingQual, int minBaseQual) {
-        final byte observedBase1 = twoRead.getFirst().getBase();
-        final byte qualityScore1 = qualToUse(twoRead.getFirst(), ignoreBadBases, capBaseQualsAtMappingQual, minBaseQual);
-        final byte observedBase2 = twoRead.getSecond().getBase();
-        final byte qualityScore2 = qualToUse(twoRead.getSecond(), ignoreBadBases, capBaseQualsAtMappingQual, minBaseQual);
+    public int add(List<PileupElement> overlappingPair, boolean ignoreBadBases, boolean capBaseQualsAtMappingQual, int minBaseQual) {
+        final PileupElement p1 = overlappingPair.get(0);
+        final PileupElement p2 = overlappingPair.get(1);
+
+        final byte observedBase1 = p1.getBase();
+        final byte qualityScore1 = qualToUse(p1, ignoreBadBases, capBaseQualsAtMappingQual, minBaseQual);
+        final byte observedBase2 = p2.getBase();
+        final byte qualityScore2 = qualToUse(p2, ignoreBadBases, capBaseQualsAtMappingQual, minBaseQual);
 
         if ( qualityScore1 == 0 ) {
             if ( qualityScore2 == 0 ) // abort early if we didn't see any good bases
